# long_regex

./: .gitignore  MANUAL.md  README.md  from_lregex.py  pyproject.toml  valid_words.py
documentation/: MANUAL.md
examples/: example_001.md  example_002.md  example_003.md
lregex/: __init__.py  from_lregex.py  functions.py
src/lregex/: __init__.py  from_lregex.py  functions.py  lregex_to_regex.py  re_to_lregex.py  valid_words.py
tests/: test_from_lregex.py  test_functions.py  test_re_to_lregex.py
