[project]
name = "long-regex"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
addopts = "--ignore=ideas/"
testpaths = [
    "tests"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]